refactoring, image reading outfactored
in order to demonstrate 2 programs, 1 for interleaved
and 1 for non-interleaved, it is better to factor
image reading out of the program.

--- a/episode-003/Makefile
+++ b/episode-003/Makefile
@@ -13,6 +13,6 @@ clean:
 .c.o:
 	$(CC) $(CFLAGS) $^ -c -o $@
 
-playfield: playfield.o
+playfield: playfield.o tilesheet.o
 	$(CC) $^ $(LDFLAGS) -o $@
 
