episode 003 files finalized

--- a/episode-003/Makefile
+++ b/episode-003/Makefile
@@ -1,18 +1,40 @@
-CC = vc +kick13
-CFLAGS=  -I$(NDK_INC) -c99 -O2 -I../include #-DINTERLEAVED
+CC=vc +kick13
+CFLAGS=-I$(NDK_INC) -c99 -O2 -I../include # -DSPLIT_SCREEN #-DINTERLEAVED
 LDFLAGS=-lamiga -lauto
+EXES=playfield_ni playfield_split_ni playfield_il playfield_split_il
 
 .PHONY : clean check
 .SUFFIXES : .o .c
 
-all: playfield
+all: $(EXES)
 
 clean:
-	rm -f *.o playfield
+	rm -f *.o $(EXES)
 
 .c.o:
 	$(CC) $(CFLAGS) $^ -c -o $@
 
-playfield: playfield.o tilesheet.o
+playfield_ni: playfield_ni.o tilesheet.o
 	$(CC) $^ $(LDFLAGS) -o $@
 
+playfield_il: playfield_il.o tilesheet.o
+	$(CC) $^ $(LDFLAGS) -o $@
+
+playfield_split_ni: playfield_split_ni.o tilesheet.o
+	$(CC) $^ $(LDFLAGS) -o $@
+
+playfield_split_il: playfield_split_il.o tilesheet.o
+	$(CC) $^ $(LDFLAGS) -o $@
+
+
+playfield_ni.o: playfield.c
+	$(CC) $(CFLAGS) $^ -c -o $@
+
+playfield_il.o: playfield.c
+	$(CC) $(CFLAGS) -DINTERLEAVED $^ -c -o $@
+
+playfield_split_ni.o: playfield.c
+	$(CC) $(CFLAGS) -DSPLIT_SCREEN $^ -c -o $@
+
+playfield_split_il.o: playfield.c
+	$(CC) $(CFLAGS) -DSPLIT_SCREEN -DINTERLEAVED $^ -c -o $@
