added sprite examples
  - example 01: simple 4 color sprite
  - example 02: overlapping sprites
  - example 03: attached sprites
  - example 04: moving and animating sprites
  - example 05: draw priorities
  - example 05: draw priorities
  - example 06: sprite-sprite collision
  - example 07: multiplexing

--- a/episode-004/.gitignore
+++ b/episode-004/.gitignore
@@ -1,5 +1,11 @@
 fishtank
-fishtank-00
-fishtank-01
+example_00
+example_01
+example_02
+example_03
+example_04
+example_05
+example_06
+example_07
 assets
 script.txt
