--- a/episode-004/Makefile
+++ b/episode-004/Makefile
@@ -1,7 +1,7 @@
 CC=vc +kick13
 CFLAGS=-I$(NDK_INC) -c99 -O2 -I../include
 LDFLAGS=-lamiga -lauto
-EXES=fishtank-00 fishtank-01 fishtank
+EXES=example_00 example_01 example_02 example_03 example_04 example_05 example_06 example_07
 
 .PHONY : clean check
 .SUFFIXES : .o .c
@@ -14,11 +14,26 @@ clean:
 .c.o:
 	$(CC) $(CFLAGS) $^ -c -o $@
 
-fishtank: fishtank.o tilesheet.o
+example_07: example_07.o tilesheet.o sprites.o
 	$(CC) $^ $(LDFLAGS) -o $@
 
-fishtank-01: fishtank-01.o tilesheet.o
+example_06: example_06.o tilesheet.o sprites.o
 	$(CC) $^ $(LDFLAGS) -o $@
 
-fishtank-00: fishtank-00.o tilesheet.o
+example_05: example_05.o tilesheet.o sprites.o
+	$(CC) $^ $(LDFLAGS) -o $@
+
+example_04: example_04.o tilesheet.o sprites.o
+	$(CC) $^ $(LDFLAGS) -o $@
+
+example_03: example_03.o tilesheet.o
+	$(CC) $^ $(LDFLAGS) -o $@
+
+example_02: example_02.o tilesheet.o
+	$(CC) $^ $(LDFLAGS) -o $@
+
+example_01: example_01.o tilesheet.o
+	$(CC) $^ $(LDFLAGS) -o $@
+
+example_00: example_00.o tilesheet.o
 	$(CC) $^ $(LDFLAGS) -o $@
